--- a/nav.html
+++ b/nav.html
@@ -1,2 +1,32 @@
-<canvas id="mf"></canvas>
-<script src="nav/nav.js"> </script>
+<!DOCTYPE html>
+
+
+<html lang="en">
+
+<head>
+
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="description" content="">
+   <meta name="author" content="">
+
+   <title>Brendan Sanderson</title>
+
+   <link rel="stylesheet" type="text/css" href="./css/styles.css">
+   <link href="core/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <script src="core/jquery/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+   <script src="core/bootstrap/js/bootstrap.min.js"></script>
+
+
+</head>
+
+<body id="page-top" class="index">
+   <section id="nav-js">
+       <div id="nav_canvas" class="row">
+               <canvas id="mfnav"></canvas>
+               <script src="nav/nav.js" type="text/javascript"></script>
+       </div>
+   </section>
+</body>
